Removed: Unneeded install_* classes from the provided stylesheets. Fixed: Removed align="middle" from images on all pages because they look out of place in the newer Gecko engine builds (FireFox 1.5) Fixed: Thread list "there are no messages in this mode" text eas stuck to the bottom of the drop down in newer Gecko engine builds (FireFox 1.5)

--- a/forum/styles/Yellow/style.css
+++ b/forum/styles/Yellow/style.css
@@ -545,7 +545,7 @@ A {
       border-left-width: 0px
 }
 
-.bhinputtext, .bhtextarea, .bhselect, .install_dropdown,
+.bhinputtext, .bhtextarea, .bhselect,
 .logon_dropdown, .register_dropdown, .search_dropdown,
 .banned_dropdown, .links_dropdown, .admin_startpage_textarea,
 .dictionary_word_display, .dictionary_best_selection,
@@ -753,10 +753,6 @@ A {
     border: 1px solid #777777;
     padding: 5px;
     margin: 5px;
-}
-
-.install_dropdown{
-    width: 234px;
 }
 
 .logon_dropdown {
